# aceteam-nodes

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  flake.nix  pyproject.toml  release.sh
examples/: hello-citadel-direct.json  hello-citadel-routed.json  hello-llm.json  scrape-aceteam.json  scrape-cbc.json  scrape-linkedin.json  text-passthrough.json
scripts/: browser_setup.py  release.sh
src/aceteam_nodes/: __init__.py  __main__.py  browser_setup.py  cli.py  context.py  discovery.py  execution.py  field.py  mcp_server.py  node_base.py  node_info.py  playwright_profile.py  utils.py  workflow.py
src/aceteam_nodes/nodes/: __init__.py  api_call.py  browser_fetch.py  comparison.py  conditional.py  csv_reader.py  data_transform.py  discord_send.py  iteration.py  llm.py  shell.py  slack_send.py  telegram_send.py  text_io.py  xpath_extract.py
src/aceteam_nodes/nodes/discord/: __init__.py  bot_info.py  common.py  list_channels.py  read_messages.py  send.py
src/aceteam_nodes/nodes/slack/: __init__.py  common.py  list_channels.py  read_messages.py  search_messages.py  send.py
src/aceteam_nodes/nodes/telegram/: __init__.py  bot_info.py  common.py  health.py  list_chats.py  read_messages.py  send.py
tests/: conftest.py  telegram_mocks.py  test_context.py  test_discord_bot_info.py  test_discord_list_channels.py  test_discord_read_messages.py  test_discord_send.py  test_entry_points.py  test_execution.py  test_nodes.py  test_shell.py  test_slack_send.py  test_telegram_health.py  test_telegram_list_chats.py  test_telegram_read_messages.py  test_telegram_send.py  test_xpath_extract.py  workflow_helpers.py
tests/discord/: mocks.py  test_bot_info.py  test_list_channels.py  test_read_messages.py  test_send.py
tests/slack/: mocks.py  test_list_channels.py  test_read_messages.py  test_search_messages.py  test_send.py
tests/telegram/: mocks.py  test_bot_info.py  test_list_chats.py  test_read_messages.py  test_send.py
