[project]
name = "aceteam-nodes"
version = "6.1.0"
description = "Workflow node types for aceteam-workflow-engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aceteam-workflow-engine>=2.0.0rc13",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "overrides>=7.7.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0",
]

# One extra per node that needs heavy/optional deps, named after the node, so
# `aceteam-nodes[browser-fetch]` reads as "BrowserFetch is installed" — the
# convention the engine's entry-point extras syntax expects (see the
# `[extra]` suffixes in the node entry points below).
[project.optional-dependencies]
browser-fetch = ["playwright>=1.47.0", "playwright-stealth>=2.0.3"]
discord-bot-info = ["discord.py>=2.4.0"]
discord-list-channels = ["discord.py>=2.4.0"]
discord-read-messages = ["discord.py>=2.4.0"]
discord-send = ["discord.py>=2.4.0"]
llm = ["aceteam-aep>=0.2.0"]
slack-send = ["aiohttp>=3.14.1", "slack-sdk>=3.42.0"]
telegram-health = ["python-telegram-bot>=21.0"]
telegram-list-chats = ["python-telegram-bot>=21.0"]
telegram-read-messages = ["python-telegram-bot>=21.0"]
telegram-send = ["python-telegram-bot>=21.0"]
xpath-extract = ["lxml>=6.1.0"]

[dependency-groups]
dev = [
    "aceteam-aep>=0.2.0",
    "aiohttp>=3.14.1",
    "discord.py>=2.4.0",
    "lxml>=6.1.0",
    "playwright-stealth>=2.0.3",
    "playwright>=1.47.0",
    "pyright>=1.1",
    "pytest-asyncio>=0.24",
    "pytest>=8.0",
    "python-telegram-bot>=21.0",
    "ruff>=0.8",
    "slack-sdk>=3.42.0",
]

[project.scripts]
ace-browser-setup = "aceteam_nodes.browser_setup:main"

# Advertise each node to the workflow engine via the standard entry-point
# group. The engine discovers nodes only through this table (read from package
# metadata without importing); `wengine install aceteam-nodes` reads it too.
# Each entry name is the node's `type` discriminator; the `[extra]` suffix
# names the optional-dependency a node needs.
[project.entry-points."aceteam_workflow_engine.nodes"]
APICall = "aceteam_nodes.nodes.api_call:APICallNode"
BrowserFetch = "aceteam_nodes.nodes.browser_fetch:BrowserFetchNode [browser-fetch]"
DiscordBotInfo = "aceteam_nodes.nodes.discord.bot_info:DiscordBotInfoNode [discord-bot-info]"
DiscordListChannels = "aceteam_nodes.nodes.discord.list_channels:DiscordListChannelsNode [discord-list-channels]"
DiscordReadMessages = "aceteam_nodes.nodes.discord.read_messages:DiscordReadMessagesNode [discord-read-messages]"
DiscordSendMessage = "aceteam_nodes.nodes.discord.send:DiscordSendMessageNode [discord-send]"
LLM = "aceteam_nodes.nodes.llm:LLMNode [llm]"
Shell = "aceteam_nodes.nodes.shell:ShellNode"
SlackSendMessage = "aceteam_nodes.nodes.slack_send:SlackSendMessageNode [slack-send]"
TelegramHealth = "aceteam_nodes.nodes.telegram.health:TelegramHealthNode [telegram-health]"
TelegramListChats = "aceteam_nodes.nodes.telegram.list_chats:TelegramListChatsNode [telegram-list-chats]"
TelegramReadMessages = "aceteam_nodes.nodes.telegram.read_messages:TelegramReadMessagesNode [telegram-read-messages]"
TelegramSendMessage = "aceteam_nodes.nodes.telegram.send:TelegramSendMessageNode [telegram-send]"
XPathExtract = "aceteam_nodes.nodes.xpath_extract:XPathExtractNode [xpath-extract]"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aceteam_nodes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
